--- a/src/components/Dashboard/styles.scss
+++ b/src/components/Dashboard/styles.scss
@@ -30,10 +30,10 @@ th {
 
 .dashboard-url {
 	display: flex;
-	justify-content: start;
+	justify-content: flex-start;
 }
 
 .dashboard-balance {
 	display: flex;
-	justify-content: start;
+	justify-content: flex-start;
 }
