--- a/src/components/Settings/styles.scss
+++ b/src/components/Settings/styles.scss
@@ -12,7 +12,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 50%;
-	justify-content: start;
+	justify-content: flex-start;
 }
 
 .settings-section {
